--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 <p style="text-align:center;"><img src="https://i.imgur.com/9EQGDlX.png" alt="Rococo" align="middle">
+    <center>Credit to Mike Almond's HQ Trivia Assistant (https://github.com/mikealmond/hq-trivia-assistant)</center>
     </head>
     <body>
 <p align="center"><iframe width="640" height="480" src="https://www.youtube.com/embed/wAJ2EAH7yt0?autoplay=1&controls=0&showinfo=0&rel=0" frameborder="0" allowfullscreen>iframe>
