--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
 <p style="text-align:center;"><img src="https://i.imgur.com/9EQGDlX.png" alt="Rococo" align="middle">
     <center>Credit to Mike Almond's HQ Trivia Assistant (https://github.com/mikealmond/hq-trivia-assistant)</center>
+     <center>THIS IS NOT A BOT. IT IS AN AID. USE DISCRETION WHEN ANSWERING.</center>
     </head>
     <body>
 <p align="center"><iframe width="640" height="480" src="https://www.youtube.com/embed/YTl-pQPcif8?autoplay=1&controls=0&showinfo=0&rel=0&vq=hd720" frameborder="0" allowfullscreen>iframe>
