--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
      <center>THIS IS NOT A BOT. IT IS AN AID. USE DISCRETION WHEN ANSWERING.</center>
     </head>
     <body>
-<p align="center"><iframe width="640" height="480" src="https://www.youtube.com/embed/YTl-pQPcif8?autoplay=1&controls=0&showinfo=0&rel=0&vq=hd720" frameborder="0" allowfullscreen>iframe>
+<p align="center"><iframe width="640" height="480" src="https://www.youtube.com/embed/1hU6cYytHEI?autoplay=1&controls=0&showinfo=0&rel=0&vq=hd720" frameborder="0" allowfullscreen>iframe>
     </body>
 </html>
